[tool.poetry]
name = "pynyc"
version = "0.1.0"
description = "A New Years's Clock"
authors = ["Michael John <michael.john@gmx.at>"]
license = "GPL"
readme = "README.md"
include = ["pynyc/pynyc.conf", "pynyc/README.md"]

[tool.poetry.scripts]
pynyc = 'pynyc.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"
python-gettext = "^4.0"
pytz = "^2022.7"
arrow = "^1.2.3"

[tool.poetry.dev-dependencies]
#pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = false

[tool.poetry.urls]
homepage = "https://github.com/amstelchen/pynyc"
repository = "https://github.com/amstelchen/pynyc"
documentation = "https://github.com/amstelchen/pynyc"
